Update CI workflow configuration

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,3 +33,11 @@ jobs:
       run: |
         source venv/bin/activate
         pytest
+    - name: Security check with Bandit
+        run: |
+          source venv/bin/activate
+          bandit -r app
+    - name: Security check with Safety
+        run: |
+          source venv/bin/activate
+          safety check
