--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.9'
+        python-version: '3.8'
     - name: Install dependencies
       run: |
         python -m venv venv
@@ -29,6 +29,11 @@ jobs:
       run: |
         source venv/bin/activate
         flake8 .
+    - name: Start Flask server
+      run: |
+          source venv/bin/activate
+          nohup python run.py --host=0.0.0.0 --port=5000 &
+          sleep 10  # Espera 10 segundos para que el servidor se inicie
     - name: Test with pytest
       run: |
         source venv/bin/activate
@@ -40,4 +45,4 @@ jobs:
     - name: Security check with Safety
         run: |
           source venv/bin/activate
-          safety check
+          safety check --ignore70612
